Fix testimonial Swiper overflow and remove ContactInfoSection from all inner pages
- Add overflow:hidden to .testimonial-slider-3 so looped slides don't peek in from the left edge
- Remove ContactInfoSection from CustomLayout (contact strip above footer on every inner page)

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -5962,6 +5962,7 @@ p {
 .testimonial-section .testimonial-slider-3 {
   padding-top: 20px;
   padding-bottom: 20px;
+  overflow: hidden;
 }
 .testimonial-box-items .testimonial-box {
   background-color: $white;
